fix: change overflow property to auto in populated section and add loader styles with animation

--- a/app/global.css
+++ b/app/global.css
@@ -38,7 +38,7 @@
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
-   overflow: scroll;
+   overflow: auto;
  }
 
  .starter-text{
@@ -74,3 +74,21 @@
  input:focus{
    outline: none;
  }
+.loader{
+  margin: 10px;
+  width: 60px;
+  aspect-ratio: 4;
+  background: 
+      no-repeat radial-gradient(circle closest-side, #383838 90%,#0000) 0 50%,
+      no-repeat radial-gradient(circle closest-side, #383838 90%, #0000) 50% 50%,
+      no-repeat radial-gradient(circle closest-side, #383838 90%, #0000) 100% 50%;
+      ;
+  background-size: calc(100%/3) 100%;
+  animation:loading 1s infinite linear;
+}
+
+@keyframes loading{
+  33% {background-size: calc(100%/3) 0, calc(100%/3) 100%, calc(100%/3) 100% ;}
+  50% {background-size: calc(100%/3) 100%, calc(100%/3) 0, calc(100%/3) 100% ;}
+  66% {background-size: calc(100%/3) 100%, calc(100%/3) 100%, calc(100%/3) 0 ;}
+}
